Fix Scrollbar

--- a/src/assets/layout/sidebar/_sidebar-base.scss
+++ b/src/assets/layout/sidebar/_sidebar-base.scss
@@ -57,6 +57,7 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     flex-grow: 1;
     display: flex;
     width: 100%;
+    overflow-y: hidden;
 
     .app-sidebar-scroll {
       width: 100%;
